--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@
 body {
     max-width: 1440px;
     margin: auto;
-    padding: 0;
+    padding: 10px;
     box-sizing: border-box;
     font-family: 'Fira Sans Condensed', sans-serif;
+    /* border: 1px solid red; */
+}
+
+p {
+    font-size: 16px;
 }
