--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,8 @@ body {
     max-width: 1440px;
     margin: auto;
     padding: 10px;
+    padding-bottom: 0;
     box-sizing: border-box;
     font-family: 'Fira Sans Condensed', sans-serif;
     /* border: 1px solid red; */
-}
-
-p {
-    font-size: 16px;
 }
