--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@ body {
     font-family: 'Fira Sans Condensed', sans-serif;
     /* border: 1px solid red; */
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
